Added new images and updated database connection logic

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,32 +50,32 @@
               </div>
             <div class="carousel-inner">
                 <div class="carousel-item active" data-bs-interval="2000">
-                    <img class="w-100" src="img/carousel-1.jpg" alt="Image">
+                    <img class="w-100" src="img/carousel-1.png" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase animated bounceInDown">Meilleurs Services De Sécurité</h5>
                             <h1 class="display-1 text-white mb-md-4 animated zoomIn">Un Lieu Sûr Et Sécurisé Pour Vous</h1>
-                            <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contact Us</a>
+                            <a href="mailto:datasecurity@datasecurity.ma?subject=Demande%20de%20renseignements&body=Bonjour,%20j'aimerais%20en%20savoir%20plus%20sur%20vos%20services." class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contactez-nous</a>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img class="w-100" src="img/carousel-2.jpg" alt="Image">
+                    <img class="w-100" src="img/carousel-2.png" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase animated bounceInDown">Meilleurs Services De Sécurité</h5>
                             <h1 class="display-1 text-white mb-md-4 animated zoomIn">Un Lieu Sûr Et Sécurisé Pour Vous</h1>
-                            <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contact Us</a>
+                            <a href="mailto:datasecurity@datasecurity.ma?subject=Demande%20de%20renseignements&body=Bonjour,%20j'aimerais%20en%20savoir%20plus%20sur%20vos%20services." class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contactez-nous</a>
                         </div>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
-                    <img class="w-100" src="img/carousel-3.jpg" alt="Image">
+                    <img class="w-100" src="img/carousel-3.png" alt="Image">
                     <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
                         <div class="p-3" style="max-width: 900px;">
                             <h5 class="text-white text-uppercase animated bounceInDown">Meilleurs Services De Sécurité</h5>
                             <h1 class="display-1 text-white mb-md-4 animated zoomIn">Un Lieu Sûr Et Sécurisé Pour Vous</h1>
-                            <a href="" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contactez-nous</a>
+                            <a href="mailto:datasecurity@datasecurity.ma?subject=Demande%20de%20renseignements&body=Bonjour,%20j'aimerais%20en%20savoir%20plus%20sur%20vos%20services."" class="btn btn-secondary py-md-3 px-md-5 animated slideInRight">Contactez-nous</a>
                         </div>
                     </div>
                 </div>
@@ -104,7 +104,7 @@
             <div class="row gx-5">
                 <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute w-100 h-100 rounded wow zoomIn" data-wow-delay="0.3s" src="img/about.jpg" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100 rounded wow zoomIn" data-wow-delay="0.3s" src="img/about.png" style="object-fit: cover;">
                     </div>
                 </div>
                 <div class="col-lg-7">
@@ -173,11 +173,74 @@
 </section>
     <!-- Services End -->
 
+    
+    <section class="client py-5">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-12 text-center">
+                    <div class="section-title mb-4">
+                        <h2>Nos références clients :</h2>
+                    </div>
+                </div>
+            </div>
+    
+            <div class="row justify-content-center">
+                <div class="col-md-2 col-6">
+                    <div class="client-logo">
+                        <a href="https://www.marjane.ma/" target="_blank">
+                            <img src="img/marjane.png" alt="Client 1">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-2 col-6">
+                    <div class="client-logo">
+                        <a href="https://www.marjane.ma/" target="_blank">
+                            <img src="img/marjanemarket.jpg" alt="Client 2">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-2 col-6">
+                    <div class="client-logo">
+                        <a href="https://www.electroplanet.ma/" target="_blank">
+                            <img src="img/electroplanet.png" alt="Client 3">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-2 col-6">
+                    <div class="client-logo">
+                        <a href="https://tachfinecenter.ma/" target="_blank">
+                            <img src="img/tachfinecenter.jpg" alt="Client 4">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-2 col-6">
+                    <div class="client-logo">
+                        <a href="https://www.marinashopping.ma/" target="_blank">
+                            <img src="img/marina.png" alt="Client 5">
+                        </a>
+                    </div>
+                </div>
+                <div class="col-md-2 col-6">
+                    <div class="client-logo">
+                        <a href="https://www.cosmoselectro.ma/" target="_blank">
+                            <img src="img/cosmoselectro.jpg" alt="Client 6">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    
+   
+    
 
-  
+
+
+
+
 
     <!-- Offer Start -->
-    <div class="container-fluid bg-offer my-5 py-5 wow zoomIn" data-wow-delay="0.1s">
+    <!-- <div class="container-fluid bg-offer my-5 py-5 wow zoomIn" data-wow-delay="0.1s">
         <div class="container py-5">
             <div class="row gx-5 justify-content-center">
                 <div class="col-lg-7 text-center">
@@ -191,7 +254,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <!-- Offer End -->
 
 
@@ -236,8 +299,8 @@
                 <div class="col-lg-3 col-md-6">
                     <h3 class="text-white mb-4">Follow Us</h3>
                     <div class="d-flex">
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded me-2" href="#"><i class="fab fa-linkedin-in fw-normal"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square rounded" href="#"><i class="fab fa-instagram fw-normal"></i></a>
+                        
+                        <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://www.instagram.com/data_security_maroc/"><i class="fab fa-instagram fw-normal"></i></a>
                     </div>
                 </div>
                 
@@ -248,7 +311,7 @@
         <div class="container">
             <div class="row g-5">
                 <div class="col-md-6 text-center text-md-start">
-                    <p class="mb-md-0">&copy; <a class="text-white border-bottom" href="#">Ignite</a>. All Rights Reserved.</p>
+                    <p class="mb-md-0">&copy; <a class="text-white border-bottom" href="https://www.instagram.com/ignite_dev24/">Ignite</a>. All Rights Reserved.</p>
                 </div>
                 
             </div>
@@ -270,6 +333,8 @@
 
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+
+    
 </body>
 
 </html>
