--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg bg-white navbar-light shadow-sm py-3 py-lg-0 px-3 px-lg-0">
 
     <div class="container-fluid d-flex align-items-center">
-        <a class="navbar-brand d-flex align-items-center" href="#">
+        <a class="navbar-brand d-flex align-items-center" href="/">
           <img src="img/LOGO DATA 0.PNG" alt="Logo" width="80" height="80" class="d-inline-block align-text-top"><h1 class="display-5 m-0 text-secondary">Data<span class="text-primary">Security</span></h1>
           
         </a>
