--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,11 @@
           <img src="img/LOGO DATA 0.PNG" alt="Logo" width="80" height="80" class="d-inline-block align-text-top"><h1 class="display-5 m-0 text-secondary">Data<span class="text-primary">Security</span></h1>
           
         </a>
+        <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://www.instagram.com/data_security_maroc/"><i class="fab fa-instagram fw-normal"></i></a>
+        <a href="https://wa.me/212661092928" target="_blank" class="btn btn-success btn-lg">
+            <i class="bi bi-whatsapp"></i> WhatsApp
+          </a>
+          
       </div>
     
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
