--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -10,9 +10,18 @@
     
     
     
-    <a href="/adminbrand" class="btn btn-primary mt-3">add brands</a> <br>
-    <a href="/adminservice" class="btn btn-primary mt-3">add service</a><br>
-    <a href="/adminproduct" class="btn btn-primary mt-3">add products</a>
+    <a href="/adminbrand" class="btn btn-primary mt-3">Ajouter une marque</a> <br>
+    <a href="/adminbrandupdate" class="btn btn-primary mt-3">Mettre à jour une marque</a> <br>
+    <a href="/adminservice" class="btn btn-primary mt-3">Ajouter un service</a><br>
+    <a href="/adminserviceupdate" class="btn btn-primary mt-3">Mettre à jour un service</a><br>
+    <a href="/adminproduct" class="btn btn-primary mt-3">Ajouter un produit</a><br>
+    <a href="/adminproductupdate" class="btn btn-primary mt-3">Mettre à jour un produit</a><br>
+    <a href="/adminclients" class="btn btn-primary mt-3">Ajouter un client</a><br>
+    <a href="/adminclientsupdate" class="btn btn-primary mt-3">Mettre à jour un client</a><br>
+    <a href="/adminprojects" class="btn btn-primary mt-3">Gérer les Projets</a>
+    
+
+    
 
     <!-- JavaScript Libraries -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
