--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,16 +5,26 @@
           <img src="img/LOGO DATA 0.PNG" alt="Logo" width="80" height="80" class="d-inline-block align-text-top"><h1 class="display-5 m-0 text-secondary">Data<span class="text-primary">Security</span></h1>
           
         </a>
-        <a class="btn btn-lg btn-primary btn-lg-square rounded" href="https://www.instagram.com/data_security_maroc/"><i class="fab fa-instagram fw-normal"></i></a>
-        <a href="https://wa.me/212661092928" target="_blank" class="btn btn-success btn-lg">
-            <i class="bi bi-whatsapp"></i> WhatsApp
-          </a>
+        
+        
+          
+          
+        
+        
+        
           
       </div>
     
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
         <span class="navbar-toggler-icon"></span>
     </button>
+    <a href="https://wa.me/212661092928" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp" width="40" height="40">
+    </a>
+    
+    <a href="https://www.instagram.com/data_security_maroc/" target="_blank">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" width="40" height="40">
+    </a>
     <div class="collapse navbar-collapse" id="navbarCollapse">
         <div class="navbar-nav ms-auto py-0">
             <a href="#caroussel-start" class="nav-item nav-link active">ACCUEIL</a>
