--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -30,6 +30,7 @@
             <a href="#caroussel-start" class="nav-item nav-link active">ACCUEIL</a>
             <a href="#apropos" class="nav-item nav-link">DETAILS</a>
             <a href="#services" class="nav-item nav-link">SERVICES</a>
+            <a href="#services" class="nav-item nav-link">PROJETS</a>
             <!-- <div class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">SERVICES</a>
                 <div class="dropdown-menu m-0">
