--- a/public/css/style.css
+++ b/public/css/style.css
@@ -603,7 +603,7 @@ section.client .section-title {
     padding: 20px;
     border-radius: 10px;
     text-align: center;
-    max-width: 1000px;
+    max-width: 500px;
   }
   
   .project-item img {
@@ -624,3 +624,49 @@ section.client .section-title {
     color: #6c757d;
   }
   
+  .brand-item {
+  text-align: center;
+}
+
+/* Ensure images are responsive */
+.brand-item img {
+  max-width: 100%;
+  height: auto;
+}
+
+
+  /* Make sure the Swiper container takes up the full available width */
+
+  /* Prevent horizontal scroll due to overflow */
+body, html {
+    overflow-x: hidden;
+  }
+  .brand-item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+  }
+  
+  .brand-item img {
+    width: 150px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 5px; /* Optionnel, pour arrondir les coins */
+  }
+  .product-item img {
+    width: 100%;
+    height: 350px;
+    object-fit: cover;
+  }
+  .project-item img {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+  }
+  .client-logo img {
+    width: 200px;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 5px; /* Optionnel, pour arrondir les coins */
+  }
