--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -10,15 +10,16 @@
     
     
     
-    <a href="/adminbrand" class="btn btn-primary mt-3">Ajouter une marque</a> <br>
+    <a href="/adminbrand" class="btn btn-primary mt-3">Ajouter une marque</a> 
     <a href="/adminbrandupdate" class="btn btn-primary mt-3">Mettre à jour une marque</a> <br>
-    <a href="/adminservice" class="btn btn-primary mt-3">Ajouter un service</a><br>
+    <a href="/adminservice" class="btn btn-primary mt-3">Ajouter un service</a>
     <a href="/adminserviceupdate" class="btn btn-primary mt-3">Mettre à jour un service</a><br>
-    <a href="/adminproduct" class="btn btn-primary mt-3">Ajouter un produit</a><br>
+    <a href="/adminproduct" class="btn btn-primary mt-3">Ajouter un produit</a>
     <a href="/adminproductupdate" class="btn btn-primary mt-3">Mettre à jour un produit</a><br>
-    <a href="/adminclients" class="btn btn-primary mt-3">Ajouter un client</a><br>
+    <a href="/adminclients" class="btn btn-primary mt-3">Ajouter un client</a>
     <a href="/adminclientsupdate" class="btn btn-primary mt-3">Mettre à jour un client</a><br>
-    <a href="/adminprojects" class="btn btn-primary mt-3">Gérer les Projets</a>
+    <a href="/adminprojects" class="btn btn-primary mt-3">Gérer les Projets</a><br>
+    <a href="/adminbrandimage" class="btn btn-primary mt-3">Gérer les Images de Marques</a>
     
 
     
